--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Музыка Qw3ko</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class = "Box"> 
+    <header class="header">
+        <div class="conteiner">
+            <h1 class="Музыка Qw3ko">Музыка Qw3ko</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <h2 class="forms">Связаться со мной</h2>
+            <form>
+                Год выпуска альбома/сингла <input type="text" name="year" placeholder="Введите год">
+            <br>
+            <br>
+            Жанр <input type="text" name="genre" placeholder="Введите жанр" required="required">
+            <br>
+            <br>
+            <input type="submit">
+
+            </form>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer-block">
+            <p class="footer-text">Qw3ko</p>
+        </div>
+    </footer>
 </body>
 </html>
